# seuss

./: .pre-commit-config.yaml  README.md  justfile  pyproject.toml
src/: seuss.py
tests/: test_seuss.py
