[tool.poetry]
name = "seuss"
version = "0.1.0"
description = ""
authors = ["Jonathan Lange <jml@mumak.net>"]
license = "GPL-3"

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^21.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
